--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.7",
+    "graphql-hooks": "^7.0.0",
+    "next": "^14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.0"
+    "react-photo-gallery": "^8.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
